cmabios api gasto

--- a/src/app/components/almacen/almacen.component.html
+++ b/src/app/components/almacen/almacen.component.html
@@ -26,7 +26,7 @@
             <ng-template pTemplate="body" let paises>
                 <tr>
                     <td data-titulo="#"> 1</td>
-                    <td data-titulo="Fecha"> 2</td>
+                    <td data-titulo="Fecha"> </td>
                     <td data-titulo="Descripción"> 3</td>
                     <td data-titulo="Peso"> 6</td>
                     <td data-titulo="Tipo"> 7</td>
