--- a/src/app/components/gastos/gastos.component.css
+++ b/src/app/components/gastos/gastos.component.css
@@ -46,6 +46,14 @@
     width: 30px;
 }
 
+p-button {
+    margin-bottom: 10px;
+}
+
+p-toast {
+    z-index: 1;
+}
+
 
 /* fin estilos dialogo agregar  */
 
@@ -59,7 +67,6 @@
     border-left: 0;
     border-right: 0;
     border-top: 0;
-    margin-bottom: 10px;
 }
 
 .icono-table {
@@ -79,6 +86,7 @@
 .td-iconos {
     align-items: left;
     justify-content: space-between;
+    cursor: pointer;
 }
 
 
@@ -134,6 +142,9 @@
         font-weight: bold;
     }
     p-table .header {
+        display: none;
+    }
+    p-toast {
         display: none;
     }
 }
