--- a/src/app/components/empleados/empleados.component.css
+++ b/src/app/components/empleados/empleados.component.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+.contenedor2 {
+    margin-top: 10px;
+    margin-left: 15px;
+}
+
 .titulo-prin {
     text-transform: uppercase;
     margin-top: 0px;
@@ -13,7 +18,7 @@
 
 .btn-emple {
     width: 170px;
-    height: 35px;
+    height: 30px;
     margin-left: 15px;
     font-size: 13px;
     text-transform: uppercase;
@@ -25,37 +30,61 @@
 }
 
 
-/* estilos dialogo agregar  */
+/* estilos buscador */
 
-.form-row label {
-    margin-bottom: 5px;
-    margin-top: 10px;
+::placeholder {
+    color: rgb(163, 159, 159);
+    padding-left: 5px;
 }
 
-.titulo-h3 {
-    width: 100%;
-    height: 40px;
-    margin-bottom: -20px;
+.formulario {
+    margin-right: 0px;
+    margin-top: -3px;
+    text-align: center;
+    justify-content: center;
 }
 
-.titulo-h3 i {
-    margin-right: 6px;
+.formulario .div-form .form {
+    width: 350px;
+    height: 30px;
+    margin-right: 10px;
 }
 
-.identificador-detalle {
-    width: 30px;
+.formulario .div-form .boton {
+    background-color: #0573d3;
+    width: 35px;
+    height: 35px;
+    line-height: 42px;
+    text-align: center;
+    justify-content: center;
+    border-radius: 50px;
+}
+
+.formulario .div-form .boton:hover {
+    background-color: #2680cf;
+    border-radius: 50px;
+}
+
+.formulario .div-form .boton .icono-buscar {
+    color: #c7c7c7;
+    margin-top: 10;
+    margin-left: 0;
+    transition: .5s;
+    font-size: 15px;
+    cursor: pointer;
 }
 
 
-/* fin estilos dialogo agregar  */
+/* fin estilos buscador */
 
 
 /* estilos tabla */
 
 .card {
+    display: flex;
     margin-top: 15px;
     margin-left: 15px;
-    margin-right: 20px;
+    margin-right: 15px;
     border-left: 0;
     border-right: 0;
     border-top: 0;
@@ -70,6 +99,7 @@
     line-height: 30px;
     font-size: 20px;
     border-radius: 3px;
+    cursor: pointer;
 }
 
 .identificador {
@@ -85,6 +115,11 @@
 /* fin estilos tabla */
 
 @media screen and (max-width: 800px) and (min-width:180px) {
+    .card {
+        border-left: 0;
+        border-right: 0;
+        border-top: 0;
+    }
     p-table {
         width: 100%;
         font-size: .9em;
@@ -92,7 +127,7 @@
     p-table tr {
         display: flex;
         flex-direction: column;
-        border: 1px solid grey;
+        border-bottom: 1px solid grey;
         padding: 1em;
         margin-bottom: 1em;
     }
@@ -107,5 +142,71 @@
     }
     p-table .header {
         display: none;
+    }
+}
+
+@media screen and (max-width: 520px) and (min-width:180px) {
+    .formulario .div-form .form {
+        width: 250px;
+        height: 30px;
+        margin-right: 10px;
+    }
+    .formulario .div-form .boton .icono-buscar {
+        color: #c7c7c7;
+        margin-top: 10;
+        transition: .5s;
+        font-size: 15px;
+        cursor: pointer;
+    }
+}
+
+@media screen and (max-width: 350px) and (min-width:180px) {
+    .formulario .div-form .form {
+        width: 200px;
+        height: 30px;
+        margin-right: 10px;
+    }
+    p-table {
+        font-size: .8em;
+    }
+    p-table tr td {
+        flex-direction: column;
+        padding: 1em;
+        margin-bottom: 1em;
+    }
+    p-table td[data-titulo] {
+        display: flex;
+        font-size: .8em;
+    }
+    p-table td[data-titulo]::before {
+        content: attr( data-titulo);
+        width: 100px;
+        color: silver;
+        font-weight: bold;
+    }
+    p-table .header {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 270px) and (min-width:180px) {
+    .titulo-prin {
+        text-transform: uppercase;
+        margin-top: 0px;
+        margin-left: 15px;
+        padding-top: 10px;
+        font-size: 16px;
+    }
+    .formulario .div-form .form {
+        width: 135px;
+        height: 30px;
+        margin-right: 10px;
+    }
+    .formulario .div-form .boton .icono-buscar {
+        color: #c7c7c7;
+        margin-top: 10;
+        transition: .5s;
+        font-size: 15px;
+        cursor: pointer;
     }
 }
