--- a/src/app/components/empleados/empleados.component.html
+++ b/src/app/components/empleados/empleados.component.html
@@ -1,17 +1,30 @@
 <div class="contenedor">
-
     <div>
         <h2 class="titulo-prin">
             Lista de empleados
         </h2>
     </div>
-    <div class="btn">
-        <button (click)="showPositionDialog('center')" type="button" class="btn btn-primary btn-emple">
-        <i class="pi pi-user-plus icono-btn"></i>Agregar empleado</button>
+    <div class="contenedor">
+        <div class="col-md-12">
+            <div class="btn">
+                <button (click)="showPositionDialog(employee)" type="button" class="btn btn-primary btn-emple">
+                <i class="pi pi-user-plus icono-btn"></i>Agregar empleado</button>
+            </div>
+            <app-agregar-dialog #agregarDialog (newEmployeeEvent)="addItem($event)"></app-agregar-dialog>
+        </div>
     </div>
-
+    <div class="contenedor2">
+        <div class="col-md-12 formulario">
+            <form class="form-inline div-form">
+                <input class="form-control mr-sm-2 form" type="search" placeholder="Buscar..." aria-label="buscar...">
+                <small class="boton">
+          <i class="pi pi-search icono-buscar "></i>
+        </small>
+            </form>
+        </div>
+    </div>
     <div class="card">
-        <p-table [(value)]="paises" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" currentPageReportTemplate="Item {first} al {last} de {totalRecords} Items" [rowsPerPageOptions]="[5,8,10,25,50]">
+        <p-table [(value)]="empleado" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" currentPageReportTemplate="Item {first} al {last} de {totalRecords} Items" [rowsPerPageOptions]="[5,8,10,25,50]">
             <ng-template pTemplate="header">
                 <tr class="header">
                     <th class="identificador"> # </th>
@@ -23,108 +36,22 @@
                     <th></th>
                 </tr>
             </ng-template>
-            <ng-template pTemplate="body" let paises>
+            <ng-template pTemplate="body" let-empleado>
                 <tr>
-                    <td data-titulo="#"> 1</td>
-                    <td data-titulo="Nombre"> 2</td>
-                    <td data-titulo="Apellido"> 3</td>
-                    <td data-titulo="Dirección"> 6</td>
-                    <td data-titulo="Teléfono"> 7</td>
-                    <td data-titulo="Email"> 8</td>
+                    <td data-titulo="#"> {{ empleado.id }} </td>
+                    <td data-titulo="Nombre"> {{ empleado.nombre }} </td>
+                    <td data-titulo="Apellido"> {{ empleado.apellido }} </td>
+                    <td data-titulo="Dirección"> {{ empleado.direccion }} </td>
+                    <td data-titulo="Teléfono"> {{ empleado.telefono }} </td>
+                    <td data-titulo="Email"> {{ empleado.email }} </td>
                     <td class="td-iconos">
-                        <i (click)="editarEmployee('center')" class="pi pi-pencil btn-outline-primary icono-table"></i>
-                        <i class="pi pi-trash btn-outline-danger icono-table"></i>
+                        <i (click)="showPositionDialog(empleado)" class="pi pi-pencil btn-outline-primary icono-table"></i>
+                        <i (click)="deleteEmployee(empleado)" class="pi pi-trash btn-outline-danger icono-table"></i>
                     </td>
                 </tr>
             </ng-template>
         </p-table>
     </div>
 
-    <!-- dialogos -->
-    <p-dialog [(visible)]="displayPosition" [position]="position" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '70vw'} " [baseZIndex]="10000" [draggable]="false" [resizable]="false">
-        <ng-template pTemplate="header">
-            <h3 class="titulo-h3">
-                <i class="pi pi-user-plus "></i> AGREGAR EMPLEADO
-            </h3>
-        </ng-template>
-        <div class="form">
-            <form>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="nombre" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="nombre">
-                    </div>
-
-                    <div class="form-group col-md-6">
-                        <label for="apellido" class="form-label">Apellido</label>
-                        <input type="text" class="form-control" id="apellido">
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="telefono" class="form-label">Teléfono</label>
-                        <input type="number" class="form-control" id="telefono">
-                    </div>
-
-                    <div class="form-group col-md-6">
-                        <label for="direccion" class="form-label">Dirección</label>
-                        <input type="text" class="form-control" id="direccion">
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group col-md-12">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email">
-                    </div>
-                </div>
-            </form>
-        </div>
-        <p-footer>
-            <p-button icon="pi pi-save" label="Guardar" styleClass="p-button-primary"></p-button>
-        </p-footer>
-    </p-dialog>
-
-    <p-dialog [(visible)]="editarEmpleado" [position]="positionEdit" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '70vw'} " [baseZIndex]="10000" [draggable]="false" [resizable]="false">
-        <ng-template pTemplate="header">
-            <h3 class="titulo-h3">
-                <i class="pi pi-user-edit "></i> EDITAR EMPLEADO
-            </h3>
-        </ng-template>
-        <div class="form">
-            <form>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="nombre1" class="form-label">Nombre</label>
-                        <input type="text" class="form-control" id="nombre1">
-                    </div>
-
-                    <div class="form-group col-md-6">
-                        <label for="apellido1" class="form-label">Apellido</label>
-                        <input type="text" class="form-control" id="apellido1">
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="telefono1" class="form-label">Teléfono</label>
-                        <input type="number" class="form-control" id="telefono1">
-                    </div>
-
-                    <div class="form-group col-md-6">
-                        <label for="direccion1" class="form-label">Dirección</label>
-                        <input type="text" class="form-control" id="direccion1">
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group col-md-12">
-                        <label for="email1" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email1">
-                    </div>
-                </div>
-            </form>
-        </div>
-        <p-footer>
-            <p-button icon="pi pi-save" label="Guardar" styleClass="p-button-primary"></p-button>
-        </p-footer>
-    </p-dialog>
+    <p-toast></p-toast>
+</div>
