--- a/src/app/components/empleados/empleados.component.css
+++ b/src/app/components/empleados/empleados.component.css
@@ -4,9 +4,9 @@
     box-sizing: border-box;
 }
 
-.contenedor2 {
-    margin-top: 10px;
-    margin-left: 15px;
+.contenedor-dos {
+    margin-top: -10px;
+    margin-bottom: 10px;
 }
 
 .titulo-prin {
@@ -29,60 +29,44 @@
     margin-right: 6px;
 }
 
+.table-header input {
+    height: 35px;
+    width: 200px;
+    display: flex;
+}
+
 
 /* estilos buscador */
 
-::placeholder {
-    color: rgb(163, 159, 159);
-    padding-left: 5px;
+.abc {
+    margin-right: 15px;
 }
 
-.formulario {
-    margin-right: 0px;
-    margin-top: -3px;
-    text-align: center;
-    justify-content: center;
+.div-boton {
+    margin-left: 5px;
 }
 
-.formulario .div-form .form {
-    width: 350px;
-    height: 30px;
-    margin-right: 10px;
-}
-
-.formulario .div-form .boton {
-    background-color: #0573d3;
-    width: 35px;
+.imput-buscar {
     height: 35px;
-    line-height: 42px;
-    text-align: center;
-    justify-content: center;
-    border-radius: 50px;
+    padding-left: 10px;
 }
 
-.formulario .div-form .boton:hover {
-    background-color: #2680cf;
-    border-radius: 50px;
+.boton-buscar {
+    width: 70px;
+    height: 35px;
 }
 
-.formulario .div-form .boton .icono-buscar {
-    color: #c7c7c7;
-    margin-top: 10;
-    margin-left: 0;
-    transition: .5s;
-    font-size: 15px;
-    cursor: pointer;
+ ::placeholder {
+    padding-left: 5px;
+    color: rgb(163, 159, 159);
 }
-
-
-/* fin estilos buscador */
 
 
 /* estilos tabla */
 
 .card {
     display: flex;
-    margin-top: 15px;
+    margin-top: 10px;
     margin-left: 15px;
     margin-right: 15px;
     border-left: 0;
@@ -115,6 +99,9 @@
 /* fin estilos tabla */
 
 @media screen and (max-width: 800px) and (min-width:180px) {
+    .div-boton {
+        margin-left: 15px;
+    }
     .card {
         border-left: 0;
         border-right: 0;
@@ -190,6 +177,12 @@
 }
 
 @media screen and (max-width: 270px) and (min-width:180px) {
+    .table-header input {
+        width: 170px;
+    }
+    .table-header {
+        margin-left: -15px;
+    }
     .titulo-prin {
         text-transform: uppercase;
         margin-top: 0px;
