--- a/src/app/components/gastos/gastos.component.html
+++ b/src/app/components/gastos/gastos.component.html
@@ -1,16 +1,28 @@
 <div class="contenedor">
-
     <div>
         <h2 class="titulo-prin">
             Lista de gastos
         </h2>
     </div>
-    <div class="btn">
-        <button (click)="showPositionDialog('center')" type="button" class="btn btn-primary btn-gasto">
-        <i class="pi pi-plus icono-btn"></i>Agregar gasto</button>
+    <div class="contenedor-dos">
+        <div class="col-md-12">
+            <div class="btn">
+                <button (click)="showPositionDialog(gastosModel)" type="button" class="btn btn-primary btn-gasto">
+                <i class="pi pi-plus icono-btn"></i>Agregar gasto</button>
+            </div>
+            <app-dialog-gasto #verDialogGasto (verEvento)="addItem($event)"></app-dialog-gasto>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4 ml-3 mb-2 abc">
+            <input type="search " placeholder="buscar..." id="buscador" name="buscador" class="form-control imput-buscar" [value]="buscarDescripcion" (input)="buscarDescripcion = $event.target.value">
+        </div>
+        <div class="col-md-1 div-boton">
+            <button class="btn btn-primary boton-buscar" (click)="buscarGasto()">Buscar</button>
+        </div>
     </div>
     <div class="card">
-        <p-table [(value)]="gastos" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" currentPageReportTemplate="Item {first} al {last} de {totalRecords} Items" [rowsPerPageOptions]="[5,8,10,25,50]">
+        <p-table [(value)]="gastos" [paginator]="true" [rows]="10" [showCurrentPageReport]="true" [rowHover]="true" currentPageReportTemplate="Item {first} al {last} de {totalRecords} Items" [rowsPerPageOptions]="[5,8,10,25,50]" [filterDelay]="0" [globalFilterFields]="['descripcion', 'fecha']">
             <ng-template pTemplate="header">
                 <tr class="header">
                     <th class="identificador"> # </th>
@@ -29,7 +41,7 @@
                     <td data-titulo="Cantidad"> {{ gastos.cantidad }}</td>
                     <td data-titulo="Total"> {{ gastos.total | currency }}</td>
                     <td class="td-iconos">
-                        <i (click)="editGastoDb(gastos)" class="pi pi-pencil btn-outline-primary icono-table"></i>
+                        <i (click)="showPositionDialog(gastos)" class="pi pi-pencil btn-outline-primary icono-table"></i>
                         <i (click)="deletGastoDb(gastos)" class="pi pi-trash btn-outline-danger icono-table"></i>
                     </td>
                 </tr>
@@ -37,114 +49,6 @@
         </p-table>
     </div>
 
-    <!-- dialogos -->
-    <p-dialog [(visible)]="displayPosition" [position]="position" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '70vw'} " [baseZIndex]="2" [draggable]="false" [resizable]="false" [closable]="false">
-        <ng-template pTemplate="header">
-            <h3 class="titulo-h3">
-                <i class="pi pi-plus "></i> AGREGAR GASTO
-            </h3>
-        </ng-template>
-        <div class="form">
-            <form name="form" id="form" #f="ngForm">
-                <div class="form-row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="descripcion" class="form-label">Descripción</label>
-                            <input type="text" name="descripcion" id="descripcion" class="form-control" autocomplete="off" [(ngModel)]="gastosModel.descripcion" #descripcion="ngModel" required="true">
-                            <div *ngIf="descripcion.invalid && (descripcion.dirty || descripcion.touched)">
-                                <div *ngIf="descripcion.errors.required" class="alert alert-danger">
-                                    El campo descripcion es obligatorio
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group ">
-                            <label for="fecha" class="form-label">Fecha</label>
-                            <input type="date" name="fecha" id="fecha" class="form-control" autocomplete="off" [(ngModel)]="gastosModel.fecha" #fecha="ngModel" required="true">
-                            <div *ngIf="fecha.invalid && (fecha.dirty || fecha.touched)">
-                                <div *ngIf="fecha.errors.required" class="alert alert-danger">
-                                    El campo fecha es obligatorio
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="col-md-6">
-                        <div class="form-group ">
-                            <label for="cantidad" class="form-label">Cantidad</label>
-                            <input type="number" name="cantidad" id="cantidad" class="form-control" autocomplete="off" [(ngModel)]="gastosModel.cantidad" #cantidad="ngModel" required="true">
-                            <div *ngIf="cantidad.invalid && (cantidad.dirty || cantidad.touched)">
-                                <div *ngIf="cantidad.errors.required" class="alert alert-danger">
-                                    El campo cantidad es obligatorio
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group ">
-                            <label for="valor" class="form-label">Valor</label>
-                            <input type="number" name="total" id="valor" class="form-control" autocomplete="off" [(ngModel)]="gastosModel.total" #total="ngModel" required="true">
-                            <div *ngIf="total.invalid && (total.dirty || total.touched)">
-                                <div *ngIf="total.errors.required" class="alert alert-danger">
-                                    El campo total es obligatorio
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </div>
-        <p-footer>
-            <p-button type="submit" id="boton" (click)="postGastos(f)" icon="pi pi-save" label="Guardar" styleClass="p-button-primary" [disabled]="!f.form.valid"></p-button>
-
-            <p-button type="button" (click)="cerrarDialog(f)" icon="pi pi-times" label="Cancelar" styleClass="p-button-secondary"></p-button>
-        </p-footer>
-    </p-dialog>
-
-    <p-dialog [(visible)]="editGasto" [position]="positionEdit" [breakpoints]="{'960px': '75vw', '640px':     '90vw'}" [modal]="true" [style]="{width: '70vw'} " [baseZIndex]="2" [draggable]="false" [resizable]="false" [closable]="false">
-        <ng-template pTemplate="header">
-            <h3 class="titulo-h3">
-                <i class="pi pi-pencil "></i> EDITAR GASTO
-            </h3>
-        </ng-template>
-        <div class="form">
-            <form name="form" id="form" #forma="ngForm">
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="descripcion" class="form-label">Descripción</label>
-                        <input type="text" name="descripcion" id="descripcion" class="form-control" id="descripcion1" autocomplete="off" [(ngModel)]="gastosEdit.descripcion" #descripcion="ngModel" required="true">
-                        <div *ngIf="descripcion.invalid && (descripcion.dirty || descripcion.touched)">
-                            <div *ngIf="descripcion.errors.required" class="alert alert-danger">
-                                El campo descripcion es obligatorio
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="fecha1" class="form-label">Fecha</label>
-                        <input [value]="gastosEdit.fecha" (input)="gastosEdit.fecha = $event.target.value" type="date" class="form-control" id="fecha1">
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="cantidad1" class="form-label">Cantidad</label>
-                        <input [value]="gastosEdit.cantidad" (input)="gastosEdit.cantidad = $event.target.value" type="number" class="form-control" id="cantidad1">
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="valor1" class="form-label">Valor</label>
-                        <input [value]="gastosEdit.total" (input)="gastosEdit.total = $event.target.value" type="number" class="form-control" id="valor1">
-                    </div>
-                </div>
-            </form>
-        </div>
-        <p-footer>
-            <p-button type="button" (click)="saveEditGasto(forma)" icon="pi pi-save" label="Guardar" styleClass="p-button-primary" [disabled]="!forma.form.valid"></p-button>
-            <!-- <p-button type="button" (click)="cerrarDialogEdit()" icon="pi pi-times" label="Cancelar" styleClass="p-button-secondary "></p-button> -->
-        </p-footer>
-    </p-dialog>
-
     <p-toast></p-toast>
-
 
 </div>
